# skout_bot

./: .gitignore  Cargo.toml  flake.nix  todo.md
nix/: default.nix  devshell.nix
src/: main.rs  routes.rs  templates.rs
src/stream_checker/: main.rs
