[package]
name = "skout_bot"
version = "0.1.0"
authors = ["Steven Carpenter <steven.carpenter@skdevstudios.com> "]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }


[[bin]]
name = "skout"
path = "src/main.rs"

[[bin]]
name = "stream_checker"
path = "src/stream_checker/main.rs"
